# dressed-to-impress

./: README.md  cliPlan.md  dressCloudFunctionPlan.md  pyproject.toml
docs/: dressCloudFunction.md  dressHowTo.md  exploring-storage-accounts.md
dressed_to_impress/cli/: main.py
dressed_to_impress/core/commands/: cloud_dress_command.py  dress_command.py  upload_image_command.py
dressed_to_impress/core/domain/: image_asset.py
dressed_to_impress/core/ports/: blob_repository.py  errors.py  image_generation_provider.py  image_repository.py
dressed_to_impress/core/results/: app_result.py  dress_result.py
dressed_to_impress/core/use_cases/: cloud_dress_use_case.py  dress_use_case.py  prompt_templates.py  upload_image_use_case.py
dressed_to_impress/infra/: filesystem_image_repository.py  gcs_blob_repository.py  gemini_image_provider.py
gcp_function/: main.py  requirements.txt
prompts/: prompts.txt
tests/: fakes.py
tests/core/: test_cloud_dress_use_case.py  test_dress_use_case.py
tests/infra/: test_filesystem_image_repository.py  test_gemini_image_provider.py
